# Disco

./: Makefile  OUTPUT.md  README.md  assemblyStats.py  compiler.mk  configure  configure.ac  disco.cfg  disco_2.cfg  disco_3.cfg  omega3.cfg  omega3_2.cfg  omega3_3.cfg  parameter.cfg  runAssembly-MPI.sh  runAssembly.sh  runDisco-MPI-ALPS.sh  runDisco-MPI-AllineaMAP.sh  runDisco-MPI-SLURM.sh  runDisco-MPI.sh  runDisco.sh  runECC.sh  runOmega3-MPI-ALPS.sh  runOmega3-MPI-SLRUM.sh  runOmega3-MPI-SLURM.sh  runOmega3-MPI.sh  runOmega3.sh
bbmap/: README.md  a_sample_mt.sh  addadapters.sh  bbcountunique.sh  bbduk.sh  bbduk2.sh  bbest.sh  bbfakereads.sh  bbmap.sh  bbmapskimmer.sh  bbmask.sh  bbmerge-auto.sh  bbmerge.sh  bbmergegapped.sh  bbnorm.sh  bbsplit.sh  bbsplitpairs.sh  bbwrap.sh  calcmem.sh  calctruequality.sh  callpeaks.sh  callvariants.sh  callvariants2.sh  clumpify.sh  commonkmers.sh  comparesketch.sh  consect.sh  countbarcodes.sh  countgc.sh  countsharedlines.sh  crosscontaminate.sh  cutprimers.sh  decontaminate.sh  dedupe.sh  dedupe2.sh  dedupebymapping.sh  demuxbyname.sh  ecc.sh  estherfilter.sh  filterassemblysummary.sh  (+76 more)
bbmap/current/align2/: AbstractIndex.java  AbstractMapThread.java  AbstractMapper.java  BBIndex.java  BBIndex5.java  BBIndexAcc.java  BBIndexPacBio.java  BBIndexPacBioSkimmer.java  BBMap.java  BBMap5.java  BBMapAcc.java  BBMapPacBio.java  BBMapPacBioSkimmer.java  BBMapThread.java  BBMapThread5.java  BBMapThreadAcc.java  BBMapThreadPacBio.java  BBMapThreadPacBioSkimmer.java  BBSplitter.java  BBWrap.java  BandedAligner.java  BandedAlignerConcrete.java  BandedAlignerJNI.java  Blacklist.java  Block.java  CompareSamFiles.java  CompressString.java  Evaluate.java  GapTools.java  GradeSamFile.java  IndexMaker4.java  IndexMaker5.java  KeyRing.java  MSA.java  MakeQualityHistogram.java  MakeRocCurve.java  MultiStateAligner10ts.java  MultiStateAligner11ts.java  MultiStateAligner11tsJNI.java  MultiStateAligner9Flat.java  (+19 more)
bbmap/current/assemble/: AbstractBuildThread.java  AbstractExploreThread.java  AbstractRemoveThread.java  AbstractShaveThread.java  ErrorTracker.java  KmerCompressor.java  Postfilter.java  ShaveObject.java  Shaver.java  Shaver1.java  Shaver2.java  TadPipe.java  Tadpole.java  Tadpole1.java  Tadpole2.java  TadpoleWrapper.java
bbmap/current/bloom/: KCountArray.java  KCountArray2.java  KCountArray3.java  KCountArray4.java  KCountArray4MT.java  KCountArray5MT.java  KCountArray6MT.java  KCountArray7MT.java  KCountArray7MTA.java  KCountArray8MT.java  KmerCount3.java  KmerCount4.java  KmerCount5.java  KmerCount6.java  KmerCount6MT.java  KmerCount7MT.java  KmerCount7MTA.java  KmerCountAbstract.java  LargeKmerCount.java  LargeKmerCount2.java  TestLargeKmer.java
bbmap/current/clump/: Clump.java  ClumpList.java  ClumpTools.java  Clumpify.java  KmerComparator.java  KmerReduce.java  KmerSort.java  KmerSort2.java  KmerSort3.java  KmerSplit.java  PivotSet.java  ReadKey.java  Splitter.java  StreamToOutput.java
bbmap/current/cluster/: Cluster.java  ClusterTools.java  MergeReadHeaders.java  ReadTag.java  ReclusterByKmer.java
bbmap/current/dna/: AminoAcid.java  ChromArrayMaker.java  ChromToFasta.java  ChromosomeArray.java  Coverage.java  Data.java  Exon.java  FastaToChromArrays2.java  Gene.java  GeneSet.java  IntMap.java  Motif.java  MotifMulti.java  MotifProbsN.java  MotifSimple.java  Parser.java  Range.java  Scaffold.java
bbmap/current/driver/: A_Sample_Textfile.java  CollateSpikeIn.java  CompareReferenceGenomes.java  CompareSequences.java  ConcatenateFiles.java  ConcatenateTextFiles.java  Concatenator.java  ConvertSamToAln.java  CorrelateIdentity.java  CountSharedLines.java  EstherFilter.java  FilterAssemblySummary.java  FilterLines.java  FilterReadsByName.java  FindMotifs.java  GenerateNoCallsFromCoverage.java  GetSequence.java  Grep.java  LineCount.java  LoadReads.java  LookAtID.java  MakeTestScript.java  MakeTestScriptScoreOnly.java  MeasureGene.java  MergeBigelow.java  MergeCoverageOTU.java  MergeTextFiles.java  MergeTextFiles2.java  MoveFiles.java  ParseCrossblockResults.java  PrintEnv.java  ProcessFragMerging.java  ProcessSpeed.java  ProcessSpeed2.java  ProcessWebcheck.java  ReduceSilva.java  RenameAndMux.java  RenameByHeader.java  Sample.java  Search.java  (+12 more)
bbmap/current/fileIO/: ArrayFile.java  ByteFile.java  ByteFile1.java  ByteFile2.java  ByteStreamWriter.java  ChainBlock.java  ChainLine.java  CompressFiles.java  (+13 more)
bbmap/docs/: UsageGuide.txt  changelog.txt  compiling.txt  readme.txt  readme_filetypes.txt
bbmap/resources/: contents.txt  remote_files.txt
src/BuildGraph/: 10reads_containedReads.fasta  10reads_forward.fasta  bench_test_0_parGraph.txt
test/: 60000.txt  60000_join.txt  62300.txt  runEcoli.sh
(+345 files in other folders)
